--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>Highlights</h1>
-					<p>A fun little { responsive } single pager by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1>Christine Vautour</h1>
+					<p>3D Character Artist</p>
 				</header>
 				<div class="container">
 					<ul class="actions">
